[metadata]
name = mytextgrid
version = 0.0.10dev
author = Rolando Muñoz Aramburú
author_email = rolando.muar@gmail.com
description = Manipulate TextGrid files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rolandomunoz/MyTextGrid
project_urls =
    Bug Tracker = https://github.com/rolandomunoz/MyTextGrid/issues
classifiers =
	Topic :: Text Processing :: Linguistic
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src