[metadata]
name = mytextgrid
version = 0.3.2
author = Rolando Muñoz Aramburú
author_email = rolando.muar@gmail.com
description = Create, read, modify and query TextGrid files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rolandomunoz/mytextgrid
project_urls =
    Bug Tracker = https://github.com/rolandomunoz/mytextGrid/issues
    Documentation = https://mytextgrid.readthedocs.io/en/latest/index.html
    Source = https://github.com/rolandomunoz/mytextgrid
classifiers =
    Topic :: Text Processing :: Linguistic
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: Developers
keywords = 
    Praat
    TextGrid
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    chardet
[options.packages.find]
where = src